--- a/curs4/ap3.html
+++ b/curs4/ap3.html
@@ -3,36 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proiect PMS: HTML + CSS </title>
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="icon" type="image/png" href="../assets/images/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="../assets/images/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicon/apple-touch-icon.png" />
-    <link rel="stylesheet" href="../assets/css/table.css">
-    
-
-    <meta name="description" content="Free Web tutorials">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="Cazan Andrei Mihai">
+    <title>Curs 4 Aplicatia 3</title>
+    <link rel="stylesheet" href="../curs4/css/table.css">
 </head>
 <body>
-    <!-- Start Header -->
-    <header>
-        <div class="logo">
-            <img id="logo" src="../assets/images/logo.png" alt="Logo PMS">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Acasa</a></li>
-                <li><a href="../pages/portofoliu.html">Portofoliu</a></li>
-                <li class="active"><a href="../pages/blog.html">Blog</a></li>
-                <li><a href="../pages/despre.html">Despre noi</a></li>
-                <li><a href="../pages/contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!-- STOP HEADER -->
+
     <h1> Tabel + CSS</h1>
 
     <table id="tabel1">
@@ -104,6 +79,6 @@
             </tr>
         </tfoot>
     </table>
-  
- </body>
- </html>
+    
+</body>
+</html>
