--- a/proiect/pages/blog.html
+++ b/proiect/pages/blog.html
@@ -24,7 +24,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Acasa</a></li>
+                <li><a href="../index.html">Acasa</a></li>
                 <li><a href="../pages/portofoliu.html">Portofoliu</a></li>
                 <li class="active"><a href="../pages/blog.html">Blog</a></li>
                 <li><a href="../pages/despre.html">Despre noi</a></li>
