--- a/proiect/pages/portofoliu.html
+++ b/proiect/pages/portofoliu.html
@@ -9,8 +9,10 @@
     <link rel="icon" type="image/svg+xml" href="../assets/images/favicon/favicon.svg" />
     <link rel="shortcut icon" href="../assets/images/favicon/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicon/apple-touch-icon.png" />
-   
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <!--<link href="https://fonts.googleapis.com/css2?family=Sevillana&display=swap" rel="stylesheet">
+-->
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Cazan Andrei Mihai">
